--- a/Whack-a-mole2/index.html
+++ b/Whack-a-mole2/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="mole.css">
     <script src="mole.js"></script>
+    <!-- <script src="mole3.js"></script> -->
 </head>
 <body>
     <h1>Whack A Mole </h1>
@@ -13,6 +14,7 @@
     <button id="nivå1" class="nivåKnapp" onclick="visNivå('nivå1')">Nivå 1</button>
     <button id="nivå2" class="nivåKnapp" onclick="visNivå('nivå2')">Nivå 2</button>
     <br>
+    <span id="nivaa-span">Nivå : </span>
     <h2 id="score">0</h2>
     <div id="startside">
         <svg id="tutorial-innhold" width="540px" height="540px">
@@ -28,34 +30,33 @@
     </div>
     <div id="nivå1-innhold" style="display: none;">
         <svg id="brett1" width="540px" height="540px">
-            <image id="pipe1" class="pipe" href="bilder/pipe.png" x="40" y="40" height="250" ></image>
-            <image id="pipe2" class="pipe" href="bilder/pipe.png" x="220" y="40" height="250"></image>
-            <image id="pipe3" class="pipe" href="bilder/pipe.png" x="400" y="40" height="250" ></image>
-            <image id="pipe4" class="pipe" href="bilder/pipe.png" x="40" y="200" height="250"></image>
-            <image id="pipe5" class="pipe" href="bilder/pipe.png" x="220" y="200" height="250" ></image>
-            <image id="pipe6" class="pipe" href="bilder/pipe.png" x="400" y="200" height="250"></image>
-            <image id="pipe7" class="pipe" href="bilder/pipe.png" x="40" y="380" height="250" ></image>
-            <image id="pipe8" class="pipe" href="bilder/pipe.png" x="220" y="380" height="250"></image>
-            <image id="pipe9" class="pipe" href="bilder/pipe.png" x="400" y="380" height="250"></image>
-            <image id="p1" class="plante" href="bilder/plante.png" x="0" y="-200" visibility="hidden"></image>
-            <image id="b1" class="blomst" href="bilder/blomst.png" x="0" y="-100" visibility="hidden"></image>
+            <image id="pipe0" class="pipe" href="bilder/pipe.png" x="40" y="40" height="250" ></image>
+            <image id="pipe1" class="pipe" href="bilder/pipe.png" x="220" y="40" height="250"></image>
+            <image id="pipe2" class="pipe" href="bilder/pipe.png" x="400" y="40" height="250" ></image>
+            <image id="pipe3" class="pipe" href="bilder/pipe.png" x="40" y="200" height="250"></image>
+            <image id="pipe4" class="pipe" href="bilder/pipe.png" x="220" y="200" height="250" ></image>
+            <image id="pipe5" class="pipe" href="bilder/pipe.png" x="400" y="200" height="250"></image>
+            <image id="pipe6" class="pipe" href="bilder/pipe.png" x="40" y="380" height="250" ></image>
+            <image id="pipe7" class="pipe" href="bilder/pipe.png" x="220" y="380" height="250"></image>
+            <image id="pipe8" class="pipe" href="bilder/pipe.png" x="400" y="380" height="250"></image>
+            <image id="e1" class="engel" href="bilder/engel.png" x="0" y="-200" visibility="hidden"></image>
+            <image id="d1" class="djevel" href="bilder/djevel.png" x="0" y="-100" visibility="hidden"></image>
         </svg>
     </div>
-    <div id="nivå2-innhold" style="display: none;">
-        <svg id="brett2" width="540px" height="540px">
-            <image id="pipe1" class="pipe" href="bilder/pipe.png" x="40" y="40" height="250" ></image>
-            <image id="pipe2" class="pipe" href="bilder/pipe.png" x="220" y="40" height="250"></image>
-            <image id="pipe3" class="pipe" href="bilder/pipe.png" x="400" y="40" height="250" ></image>
-            <image id="pipe4" class="pipe" href="bilder/pipe.png" x="40" y="200" height="250"></image>
-            <image id="pipe5" class="pipe" href="bilder/pipe.png" x="220" y="200" height="250" ></image>
-            <image id="pipe6" class="pipe" href="bilder/pipe.png" x="400" y="200" height="250"></image>
-            <image id="pipe7" class="pipe" href="bilder/pipe.png" x="40" y="380" height="250" ></image>
-            <image id="pipe8" class="pipe" href="bilder/pipe.png" x="220" y="380" height="250"></image>
-            <image id="pipe9" class="pipe" href="bilder/pipe.png" x="400" y="380" height="250"></image>
-            <image id="p1" class="plante" href="bilder/plante.png" x="0" y="-200" visibility="hidden"></image>
-            <image id="p2" class="plante" href="bilder/plante.png" x="0" y="-100" visibility="hidden"></image>
-            <image id="b1" class="blomst" href="bilder/blomst.png" x="0" y="-100" visibility="hidden"></image>
-        </svg>
+    <table id="score-tabell">
+        <caption>Highscore</caption>
+        <tr>
+            <th>Date</th>
+            <th>Highscore</th>
+            <th>Nivå</th>
+        </tr>
+    </table>
+    <div id="game-over-box" class="modal">
+        <div class="modal-content">
+            <h2>Game Over!</h2>
+            <p>Din høyeste score denne runden: <span id="rundeScore">0</span></p>
+            <button onclick="spillIgjen()">Play Again</button>
+        </div>
     </div>
     
 </body>
